# bug-repro

./: .bazelrc  .gitignore  .npmrc  .npmrc.txt  MODULE.bazel  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
app/: BUILD.bazel  package.json  project.config.json  project.tt.json
app/config/: BUILD.bazel  dev.js  index.js  prod.js
app/src/: BUILD.bazel  app.config.ts  app.tsx
app/src/pages/index/: index.tsx
app/src/styles/: mixins.scss  variables.scss
