module(
    name = "bug_repro",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.3.0")
bazel_dep(name = "rules_pkg", version = "0.7.0")
bazel_dep(name = "platforms", version = "0.0.5")
bazel_dep(name = "aspect_rules_js", version = "1.13.1")
bazel_dep(name = "aspect_bazel_lib", version = "1.18.0")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
    # npmrc = "//:.npmrc",
    public_hoist_packages = {
        "@babel/traverse": [
            "app",
        ],
        "@tarojs/taro-loader": [
            "app",
        ],
        "@tarojs/react": [
            "app",
        ],
        "@tarojs/components": [
            "app",
        ],
        "@tarojs/plugin-platform-weapp": [
            "app",
        ],
        "@tarojs/taro": [
            "app",
        ],
    },
)

use_repo(npm, "npm")
